<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


    <TextView
        android:id="@+id/label_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_principal"
        android:textSize="25sp"
        android:layout_marginTop="7dp"
        android:textColor="@color/azul_principal"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/label_convertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_convertir"
        android:textSize="25sp"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <Spinner
        android:id="@+id/spinner_cambiario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/label_convertir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner_background"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/label_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_cambiario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_a"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <Spinner
        android:id="@+id/spinner_cambiario2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/label_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner_background"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>