<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/label_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_calculator"
        android:textSize="25sp"
        android:layout_marginTop="7dp"
        android:textColor="@color/azul_principal"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/text_cantidad"
        android:layout_width="120dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/label_calculator"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corner_background"
        android:inputType="number"
        />

    <Spinner
        android:id="@+id/spinner_cambiario3"
        android:layout_width="100dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/label_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_corner_background"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_cambiario3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_letter"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp">

        <Spinner
            android:id="@+id/spinner_cambiario4"
            android:layout_width="100dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_corner_background"
            />
        <TextView
            android:id="@+id/label_price3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="45sp"
            app:layout_constraintTop_toBottomOf="@id/spinner_cambiario4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

</androidx.constraintlayout.widget.ConstraintLayout>


    <ImageButton
        android:id="@+id/button_fxrates"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_rates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/background_buttons_off"/>

    <ImageButton
        android:id="@+id/button_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_buttons"/>
    <TextView
        android:id="@+id/label_fxrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_fxrates"
        app:layout_constraintStart_toStartOf="@id/button_fxrates"
        app:layout_constraintEnd_toEndOf="@id/button_fxrates"
        android:text="@string/label_fxrates"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/label_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintStart_toStartOf="@id/button_2"
        app:layout_constraintEnd_toEndOf="@id/button_2"
        android:text="@string/label_calcular"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>